--- a/index.html
+++ b/index.html
@@ -506,8 +506,8 @@
     <div id="contact" class="contact">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            <div class="titlepage text_align_left">
+          <div class="col-md-7 mx-auto">
+            <div class="titlepage text_align_center">
               <h2>Get In Touch</h2>
             </div>
             <form id="request" class="main_form">
@@ -550,7 +550,7 @@
               </div>
             </form>
           </div>
-          <div class="col-md-6">
+          <!--<div class="col-md-6">
             <div class="titlepage text_align_left">
               <h2>What Says Clients</h2>
             </div>
@@ -643,7 +643,7 @@
                 <span class="sr-only">Next</span>
               </a>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </div>
