about section updated

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           <div class="col-md-12">
             <div class="titlepage text_align_center">
               <h2>About <span class="text-secondary">.hack();</span></h2>
-              <img class="p-4 w-75" src="images/about.webp" alt="" />
+              <img class="p-4 w-75" src="images/DSC09076-_1_.webp" alt="" />
               <p>
                 >.hack;_ , a revolutionary platform brought forth by IEEE MACE SB
                 for students since 2020 to explore and innovate in the field of
@@ -366,7 +366,7 @@
           <div class="col-md-6">
             <div id="ho_nf" class="portfolio_main text_align_left">
               <figure>
-                <img src="images/DSC09076-_1_.webp" alt="#" />
+                <img src="images/IMG_6965-_2_-_1_.webp" alt="#" />
                 <!-- <div class="portfolio_text">
                   <div class="li_icon">
                     <a href="Javascript:void(0)"
