--- a/index.html
+++ b/index.html
@@ -551,6 +551,9 @@
               </div>
             </form>
           </div>
+        </div>
+      </div>
+    </div>
           <!-- <div class="col-md-6">
 
             <div class="titlepage text_align_left">
