--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@
   <div class="container" data-aos="fade-up">
     <div class="row">
       <div class="col-md-12">
-        <div class="titlepage text_align_center track-title">
-          <h2>Sustainable Development Goals</h2>
+        <div class="text_align_center track-title">
+          <h3 style="font-size: 30px; font-weight: bold;">.hack();24 focus on recognizing impactful and ethical projects that address critical challenges tied to the UN Sustainable Development Goals (SDGs)</h3>
         </div>
       </div>
     </div>
